logs/pub_sub2/build.make.017.log.stderr
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel.cpp: In function ‘int main(int, char**)’:
/home/ros-industrial/HW8/src/pub_sub2/src/pubvel.cpp:49:7: error: expected primary-expression before ‘<<’ token
       << " linear=" << msg.linear.x
       ^
make[2]: *** [CMakeFiles/pubvel.dir/src/pubvel.cpp.o] Error 1
make[1]: *** [CMakeFiles/pubvel.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [all] Error 2
